syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrdersResponse {
  repeated CreateOrderResponse orders = 1;
}

// Importing the google/protobuf/empty.proto file to use the Empty message 
// for the ListOrders RPC method
import "google/protobuf/empty.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(google.protobuf.Empty) returns (ListOrdersResponse);
}